Fix alignment of header and contact buttons

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,12 @@
+.container {
+    display: flex;
+    align-items: center;
+}
+
+.navbar-text {
+    font-size: 18px;
+}
+
 .navbar-brand {
     font-size: 28px;
     margin-right: 25px;
