--- a/src/tabs/Home.css
+++ b/src/tabs/Home.css
@@ -38,11 +38,7 @@
     padding: 0.5em 0.8em;
 }
 
-.resume-button {
-
-}
-
-.resume-buttons {
+.contact-buttons {
     display: flex;
     justify-content: center;
 }
